use MaxPermSize for Java 7