@@ -2,4 +2,4 @@
 IMAGE=sepe/tomcat7-java8
 PORT=8080
 echo startup $IMAGE on port $PORT and mount webapps
-docker run -d -p $PORT:8080 --env "CATALINA_OPTS=-Xmx1g -XX:MaxMetaspaceSize=256m" -v $(pwd)/webapps:/opt/apache-tomcat/webapps $IMAGE run
+docker run -d -p $PORT:8080 --env "CATALINA_OPTS=-Xmx1g -XX:MaxPermSize=256m" -v $(pwd)/webapps:/opt/apache-tomcat/webapps $IMAGE run
